ADD: Cypress to influxDB and minor fixes in import and update to jira scripts
Signed-off-by: Gabriel <biellhenri@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "create:currentreport": "mkdir -p cypress/reports/$(date +'%Y-%m-%d')",
     "pretest": "npm run remove:currentreport && npm run create:currentreport",
     "scripts": "cypress run",
-    "archive-report": "cp -r cypress/reports/mocha cypress/reports/$(date +'%Y-%m-%d')/",
+    "archive-report": "cp -r cypress/reports/mocha cypress/reports/$(date +'%Y-%m-%d')/ && rm -rf cypress/reports/mocha",
     "test": "npm run scripts; npm run archive-report"
   },
   "keywords": [],
